Sarath.sfp_Dev_Org/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Adventure_Rating__c</fullName>
        <label>Adventure Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(1) Easy Rider</fullName>
                </value>
                <value>
                    <fullName>(2) Moderate Challenge</fullName>
                </value>
                <value>
                    <fullName>(3) Thrill-Seeker</fullName>
                </value>
                <value>
                    <fullName>(4) Code Habanero Alert</fullName>
                </value>
                <value>
                    <fullName>(5) Adrenaline Junkie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Boat_Dive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boat Dive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canyoneering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Canyoneering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_Trip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <label>Duration (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Nights__c</fullName>
        <label>Duration (Nights)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedition_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expedition Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Adventures (Expedition Leader)</relationshipLabel>
        <relationshipName>Adventures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gear_Rental_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gear Rental Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Marketer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Marketer</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Adventures</relationshipLabel>
        <relationshipName>Adventures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Participants__c</fullName>
        <label>Max Participants</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Cert_Needed__c</fullName>
        <label>Min Cert Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open Water</fullName>
                </value>
                <value>
                    <fullName>Adventure</fullName>
                </value>
                <value>
                    <fullName>Advanced Open Water</fullName>
                </value>
                <value>
                    <fullName>Rescue</fullName>
                </value>
                <value>
                    <fullName>Master</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_Age__c</fullName>
        <label>Minimum Age</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Ages Welcome</fullName>
                </value>
                <value>
                    <fullName>7+</fullName>
                </value>
                <value>
                    <fullName>12+</fullName>
                </value>
                <value>
                    <fullName>16+</fullName>
                </value>
                <value>
                    <fullName>18+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Lead_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Lead Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Waiver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs Waiver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overnight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overnight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permits_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permits Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Porters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Porters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_image__c</fullName>
        <label>Product image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Route_Type__c</fullName>
        <label>Route Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top Rope</fullName>
                </value>
                <value>
                    <fullName>Sport Climbing</fullName>
                </value>
                <value>
                    <fullName>Trad Climbing</fullName>
                </value>
                <value>
                    <fullName>Bouldering</fullName>
                </value>
                <value>
                    <fullName>Multi-Pitch Climb</fullName>
                </value>
                <value>
                    <fullName>Psicobloc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shore_Dive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shore Dive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Crew_Requests__c</fullName>
        <label>Special Crew Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Types_Accepted__c</fullName>
        <label>Types Accepted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PADI</fullName>
                </value>
                <value>
                    <fullName>NAUI</fullName>
                </value>
                <value>
                    <fullName>SSI</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>